--- a/app/src/main/res/layout/product_added_in_newlist_item.xml
+++ b/app/src/main/res/layout/product_added_in_newlist_item.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <ImageView
@@ -17,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:layout_marginLeft="15dp"
         android:orientation="vertical">
 
         <TextView
@@ -24,7 +25,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1.5"
-            android:text="TextView" />
+            android:gravity="center_vertical"
+            android:text="TextView"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:textSize="24sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -37,12 +41,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:gravity="center_vertical"
                 android:text="TextView" />
+
             <TextView
                 android:id="@+id/textViewSupermercadoProductoAddedItem"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:gravity="center_vertical"
                 android:text="TextView" />
         </LinearLayout>
 
@@ -51,7 +58,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1.3">
+        android:layout_weight="1.5">
 
         <EditText
             android:id="@+id/editNumeroProductos"
@@ -66,7 +73,7 @@
         android:id="@+id/buttonDeleteProduct"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_weight="1.3"
         android:onClick="deleteProductItem"
         app:srcCompat="@android:drawable/ic_delete" />
 
